fixed bug: launching WebMSX on a small viewport pushes the titlebar up off screen

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,7 +1,11 @@
 #app-area
   display: flex
   height: 100%
+  width: 100%
   padding-bottom: 2rem
+  position: fixed
+  top: 32px
+  left: 0
 
 #navigation-menu
   flex: 0 0 36px
