--- a/src/app/shared/components/window-controls/window-controls.component.sass
+++ b/src/app/shared/components/window-controls/window-controls.component.sass
@@ -2,6 +2,9 @@
   height: 32px
   width: 100%
   -webkit-app-region: drag
+  position: fixed
+  top: 0
+  left:0
 
 .maximized #titlebar
   width: 100%
